<resources>
    <string name="app_name">EaseMobChatDemo</string>
    <string name="action_settings">Settings</string>
    <string name="username_hide">请输入用户名</string>
    <string name="pwd_hide">请输入密码</string>
    <string name="login_string">登录</string>
    <string name="confirm_pwd_hide">请输入确认密码</string>
    <string name="not_user_string">还没帐号？</string>
    <string name="register_string">注册</string>
    <string name="sendMsg">发送</string>
</resources>
